Test fixes for Bug 531714 - Switch Expression